--- a/classCore_1_1ManagerPRUs.html
+++ b/classCore_1_1ManagerPRUs.html
@@ -176,8 +176,7 @@ Static Public Member Functions</h2></td></tr>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1ManagerPRUs_a56b1e5d1556de238802d32a6e9316774_icgraph.svg" width="262" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classCore_1_1ManagerPRUs_a56b1e5d1556de238802d32a6e9316774_icgraph.svg" width="262" height="55"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
