--- a/classMath_1_1LinearConverter.html
+++ b/classMath_1_1LinearConverter.html
@@ -228,8 +228,7 @@ template&lt;typename DataType&gt; </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classMath_1_1LinearConverter_a0b41880c7734a6edf56ccf798dfc693b_icgraph.svg" width="370" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classMath_1_1LinearConverter_a0b41880c7734a6edf56ccf798dfc693b_icgraph.svg" width="370" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
@@ -273,8 +272,7 @@ template&lt;typename DataType&gt; </div>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classMath_1_1LinearConverter_a273d07db25141b970ca038d0826e83be_icgraph.svg" width="370" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classMath_1_1LinearConverter_a273d07db25141b970ca038d0826e83be_icgraph.svg" width="370" height="123"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
