--- a/classThreadHelper.html
+++ b/classThreadHelper.html
@@ -194,8 +194,7 @@ Static Public Member Functions</h2></td></tr>
 <div class="dynheader">
 Here is the caller graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="classThreadHelper_a4426e115e7858a4b6f6eedbc77302756_icgraph.svg" width="1087" height="672"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="classThreadHelper_a4426e115e7858a4b6f6eedbc77302756_icgraph.svg" width="1087" height="672"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
