--- a/dir_4119c0cd5bacdb5d6b5b9ca75c22efa2.html
+++ b/dir_4119c0cd5bacdb5d6b5b9ca75c22efa2.html
@@ -88,8 +88,7 @@ $(document).ready(function(){initNavTree('dir_4119c0cd5bacdb5d6b5b9ca75c22efa2.h
 <div class="dynheader">
 Directory dependency graph for MotorControl:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="dir_4119c0cd5bacdb5d6b5b9ca75c22efa2_dep.svg" width="152" height="203"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="dir_4119c0cd5bacdb5d6b5b9ca75c22efa2_dep.svg" width="152" height="203"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="files"></a>
