--- a/BoeingSurfaceVehicleControl_8cpp.html
+++ b/BoeingSurfaceVehicleControl_8cpp.html
@@ -103,8 +103,7 @@ $(document).ready(function(){initNavTree('BoeingSurfaceVehicleControl_8cpp.html'
 </div><div class="textblock"><div class="dynheader">
 Include dependency graph for BoeingSurfaceVehicleControl.cpp:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="BoeingSurfaceVehicleControl_8cpp__incl.svg" width="1259" height="419"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="BoeingSurfaceVehicleControl_8cpp__incl.svg" width="1259" height="419"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="BoeingSurfaceVehicleControl_8cpp_source.html">Go to the source code of this file.</a></p>
