--- a/dir_29b3cdf2ace9b471d46f94fc6def7890.html
+++ b/dir_29b3cdf2ace9b471d46f94fc6def7890.html
@@ -88,8 +88,7 @@ $(document).ready(function(){initNavTree('dir_29b3cdf2ace9b471d46f94fc6def7890.h
 <div class="dynheader">
 Directory dependency graph for PRU:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="dir_29b3cdf2ace9b471d46f94fc6def7890_dep.svg" width="126" height="203"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="dir_29b3cdf2ace9b471d46f94fc6def7890_dep.svg" width="126" height="203"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="files"></a>
