--- a/dir_6128fcfee895fc4225f33af940001cbd.html
+++ b/dir_6128fcfee895fc4225f33af940001cbd.html
@@ -88,8 +88,7 @@ $(document).ready(function(){initNavTree('dir_6128fcfee895fc4225f33af940001cbd.h
 <div class="dynheader">
 Directory dependency graph for Core:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="dir_6128fcfee895fc4225f33af940001cbd_dep.svg" width="462" height="214"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="dir_6128fcfee895fc4225f33af940001cbd_dep.svg" width="462" height="214"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="subdirs"></a>
