--- a/dir_6ec1f722903a26acfafbac2be9adc1a0.html
+++ b/dir_6ec1f722903a26acfafbac2be9adc1a0.html
@@ -88,8 +88,7 @@ $(document).ready(function(){initNavTree('dir_6ec1f722903a26acfafbac2be9adc1a0.h
 <div class="dynheader">
 Directory dependency graph for MotorControl:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="dir_6ec1f722903a26acfafbac2be9adc1a0_dep.svg" width="152" height="128"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="dir_6ec1f722903a26acfafbac2be9adc1a0_dep.svg" width="152" height="128"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="files"></a>
