--- a/structCore_1_1IO_1_1Input_1_1Setup.html
+++ b/structCore_1_1IO_1_1Input_1_1Setup.html
@@ -143,8 +143,7 @@ Public Attributes</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="structCore_1_1IO_1_1Input_1_1Setup_a493b98ee230283215bd55b7ba739f60a_cgraph.svg" width="1163" height="600"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="structCore_1_1IO_1_1Input_1_1Setup_a493b98ee230283215bd55b7ba739f60a_cgraph.svg" width="1163" height="600"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
