--- a/structCore_1_1IO_1_1Output_1_1Setup.html
+++ b/structCore_1_1IO_1_1Output_1_1Setup.html
@@ -139,8 +139,7 @@ Public Attributes</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="structCore_1_1IO_1_1Output_1_1Setup_aa94d399cf6e529ff662a8d31f38bd35c_cgraph.svg" width="847" height="415"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="structCore_1_1IO_1_1Output_1_1Setup_aa94d399cf6e529ff662a8d31f38bd35c_cgraph.svg" width="847" height="415"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
