--- a/structCore_1_1IO_1_1UserLED_1_1Setup.html
+++ b/structCore_1_1IO_1_1UserLED_1_1Setup.html
@@ -142,8 +142,7 @@ Public Attributes</h2></td></tr>
 <div class="dynheader">
 Here is the call graph for this function:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="structCore_1_1IO_1_1UserLED_1_1Setup_a72bdd70912a6322aba2da15c28a84fbe_cgraph.svg" width="792" height="303"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="structCore_1_1IO_1_1UserLED_1_1Setup_a72bdd70912a6322aba2da15c28a84fbe_cgraph.svg" width="792" height="303"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 
 </div>
